@@ -1,4 +1,5 @@
 check_PROGRAMS += test/test_decode
+test_test_decode_CFLAGS = -Wno-unused
 test_test_decode_LDADD = zebra/libzebra.la
 
 check_PROGRAMS += test/test_proc
