@@ -40,8 +40,8 @@
 
 /* partial decode symbol location */
 typedef enum symbol_partial_e {
-    RIGHT_HALF = 6,
-    LEFT_HALF  = 7,
+    EAN_LEFT   = 0x0000,
+    EAN_RIGHT  = 0x1000,
 } symbol_partial_t;
 
 /* convert compact encoded D2E1E2 to character (bit4 is parity) */
@@ -226,11 +226,44 @@ static inline signed char decode4 (zebra_decoder_t *dcode,
     return(code);
 }
 
-static inline zebra_symbol_type_t partial_end (ean_pass_t *pass,
-                                               unsigned char fwd)
+static inline zebra_symbol_type_t ean_part_end4 (ean_pass_t *pass,
+                                                 unsigned char rev)
+{
+    /* extract parity bits */
+    unsigned char par = ((pass->raw[1] & 0x10) >> 1 |
+                         (pass->raw[2] & 0x10) >> 2 |
+                         (pass->raw[3] & 0x10) >> 3 |
+                         (pass->raw[4] & 0x10) >> 4);
+
+    dprintf(2, " par=%x", par);
+    if(par && par != 0xf)
+        /* invalid parity combination */
+        return(ZEBRA_NONE);
+
+    if(!par == !rev) {
+        /* reverse sampled digits */
+        unsigned char tmp = pass->raw[1];
+        pass->raw[1] = pass->raw[4];
+        pass->raw[4] = tmp;
+        tmp = pass->raw[2];
+        pass->raw[2] = pass->raw[3];
+        pass->raw[3] = tmp;
+    }
+
+    dprintf(2, "\n");
+    dprintf(1, "decode4=%x%x%x%x\n",
+            pass->raw[1] & 0xf, pass->raw[2] & 0xf,
+            pass->raw[3] & 0xf, pass->raw[4] & 0xf);
+    if(!par)
+        return(ZEBRA_EAN8 | EAN_RIGHT);
+    return(ZEBRA_EAN8 | EAN_LEFT);
+}
+
+static inline zebra_symbol_type_t ean_part_end7 (ean_pass_t *pass,
+                                                 unsigned char rev)
 {
     /* calculate parity index */
-    unsigned char par = ((fwd)
+    unsigned char par = ((!rev)
                          ? ((pass->raw[1] & 0x10) << 1 |
                             (pass->raw[2] & 0x10) |
                             (pass->raw[3] & 0x10) >> 1 |
@@ -255,7 +288,7 @@ static inline zebra_symbol_type_t partial_end (ean_pass_t *pass,
         /* invalid parity combination */
         return(ZEBRA_NONE);
 
-    if(!par == fwd) {
+    if(!par == !rev) {
         /* reverse sampled digits */
         unsigned char i;
         for(i = 1; i < 4; i++) {
@@ -265,10 +298,17 @@ static inline zebra_symbol_type_t partial_end (ean_pass_t *pass,
         }
     }
 
+    dprintf(2, "\n");
+    dprintf(1, "decode=%x%x%x%x%x%x%x(%02x)\n",
+            pass->raw[0] & 0xf, pass->raw[1] & 0xf,
+            pass->raw[2] & 0xf, pass->raw[3] & 0xf,
+            pass->raw[4] & 0xf, pass->raw[5] & 0xf,
+            pass->raw[6] & 0xf, par);
+
     if(!par)
-        return(RIGHT_HALF);
+        return(ZEBRA_EAN13 | EAN_RIGHT);
     if(par & 0x20)
-        return(LEFT_HALF);
+        return(ZEBRA_EAN13 | EAN_LEFT);
     return(/*ZEBRA_UPCE*/ZEBRA_NONE);
 }
 
@@ -278,11 +318,18 @@ static inline zebra_symbol_type_t decode_pass (zebra_decoder_t *dcode,
 {
     pass->state++;
     unsigned char idx = pass->state & STATE_IDX;
-    if((1 << idx) &
-       ((pass->state & STATE_ADDON)
-        ? 0x00108421
-        : 0x00111111))
-    {
+    unsigned char rev = pass->state & 1;
+
+    if(get_color(dcode) == ZEBRA_BAR &&
+       (idx == 0x10 || idx == 0x0f) &&
+       !aux_end(dcode, (rev) ? 3 : 4)) {
+        dprintf(2, " rev=%x", rev);
+        zebra_symbol_type_t part = ean_part_end4(pass, rev);
+        pass->state = -1;
+        return(part);
+    }
+
+    if(!(idx & 0x03) && idx <= 0x14) {
         unsigned s = calc_s(dcode, 0, 4);
         if(!s)
             return(0);
@@ -308,22 +355,13 @@ static inline zebra_symbol_type_t decode_pass (zebra_decoder_t *dcode,
                     pass->raw[6] & 0xf);
         }
     }
-    else if((get_color(dcode) == ZEBRA_BAR) &&
-            ((pass->state & STATE_ADDON)
-             ? idx == 0x06 || idx == 0x09 || idx == 0x16 || idx == 0x19
-             : idx == 0x17 || idx == 0x18)) {
-        unsigned char fwd = idx == 0x18;
-        dprintf(2, " fwd=%x", fwd);
+
+    if(get_color(dcode) == ZEBRA_BAR &&
+       (idx == 0x18 || idx == 0x17)) {
         zebra_symbol_type_t part = ZEBRA_NONE;
-        if(!aux_end(dcode, (fwd) ? 4 : 3)) {
-            part = partial_end(pass, fwd);
-            dprintf(2, "\n");
-            dprintf(1, "decode=%x%x%x%x%x%x%x(%x)\n",
-                    pass->raw[0] & 0xf, pass->raw[1] & 0xf,
-                    pass->raw[2] & 0xf, pass->raw[3] & 0xf,
-                    pass->raw[4] & 0xf, pass->raw[5] & 0xf,
-                    pass->raw[6] & 0xf, part);
-        }
+        dprintf(2, " rev=%x", rev);
+        if(!aux_end(dcode, (rev) ? 3 : 4))
+            part = ean_part_end7(pass, rev);
         else
             dprintf(2, " [invalid end guard]");
         pass->state = -1;
@@ -332,15 +370,16 @@ static inline zebra_symbol_type_t decode_pass (zebra_decoder_t *dcode,
     return(0);
 }
 
-static inline signed char check_ean13_parity (ean_decoder_t *ean)
+static inline signed char ean_check_parity (ean_decoder_t *ean,
+                                            int n)
 {
     unsigned char chk = 0;
     unsigned char i;
-    for(i = 0; i < 12; i++) {
+    for(i = 0; i < n; i++) {
         unsigned char d = ean->buf[i];
         assert(d < 10);
         chk += d;
-        if(i & 1) {
+        if((i ^ n) & 1) {
             chk += d << 1;
             if(chk >= 20)
                 chk -= 20;
@@ -351,10 +390,10 @@ static inline signed char check_ean13_parity (ean_decoder_t *ean)
     assert(chk < 10);
     if(chk)
         chk = 10 - chk;
-    unsigned char d = ean->buf[12];
+    unsigned char d = ean->buf[n];
     assert(d < 10);
     if(chk != d) {
-        dprintf(1, "checksum mismatch %d != %d (%s)\n",
+        dprintf(1, "\nchecksum mismatch %d != %d (%s)\n",
                 chk, d, dsprintbuf(ean));
         return(-1);
     }
@@ -369,65 +408,68 @@ static inline zebra_symbol_type_t integrate_partial (ean_decoder_t *ean,
     /* copy raw data into holding buffer */
     /* if same partial is not consistent, reset others */
     dprintf(2, " integrate part=%x (%s)", part, dsprintbuf(ean));
-    unsigned char i;
-    if(part == LEFT_HALF) {
-        if(ean->buf[0] >= 0 && ean->buf[7] >= 0)
-            part = ZEBRA_EAN13;
-
-        for(i = 0; i < 7; i++) {
+    signed char i, j;
+    if(part & ZEBRA_ADDON) {
+        /* FIXME TBD */
+        for(i = (part == ZEBRA_ADDON5) ? 4 : 1; i >= 0; i--) {
             unsigned char digit = pass->raw[i] & 0xf;
-            if(part == ZEBRA_EAN13 &&
-               ean->buf[i] != digit) {
-                /* partial mismatch - reset other parts */
-                ean->buf[7] = ean->buf[13] = -1;
-                part = ZEBRA_PARTIAL;
-            }
-            ean->buf[i] = digit;
-        }
-        if(part == LEFT_HALF && ean->buf[7] >= 0)
-            part = ZEBRA_EAN13;
-    }
-    else if(part == RIGHT_HALF) {
-        if(ean->buf[0] >= 0 && ean->buf[7] >= 0)
-            part = ZEBRA_EAN13;
-        for(i = 0; i < 6; i++) {
-            unsigned char digit = pass->raw[i + 1] & 0xf;
-            if(part == ZEBRA_EAN13 &&
-               ean->buf[i + 7] != digit) {
-                /* partial mismatch - reset other parts */
-                ean->buf[0] = ean->buf[13] = -1;
-                part = ZEBRA_PARTIAL;
-            }
-            ean->buf[i + 7] = digit;
-        }
-        if(part == RIGHT_HALF && ean->buf[0] >= 0)
-            part = ZEBRA_EAN13;
-    }
-    else {
-        unsigned char len = (part == ZEBRA_ADDON5) ? 5 : 2;
-        if(ean->buf[0] >= 0 && ean->buf[7] >= 0 && ean->buf[13] >= 0)
-            part |= ZEBRA_EAN13;
-        for(i = 0; i < len; i++) {
-            unsigned char digit = pass->raw[i] & 0xf;
-            if((part & ZEBRA_SYMBOL) == ZEBRA_EAN13 &&
-               ean->buf[i + 13] != digit) {
-                /* partial mismatch - reset other parts */
-                ean->buf[0] = ean->buf[7] = -1;
-                part &= ZEBRA_ADDON;
+            if(ean->addon && ean->buf[i + 13] != digit) {
+                /* partial mismatch - reset collected parts */
+                ean->left = ean->right = ean->addon = ZEBRA_NONE;
             }
             ean->buf[i + 13] = digit;
         }
+        ean->addon = part;
     }
-    if(part == ZEBRA_EAN13 &&
-       check_ean13_parity(ean))
+    else {
+        if((ean->left && ((part & ZEBRA_SYMBOL) != ean->left)) ||
+           (ean->right && ((part & ZEBRA_SYMBOL) != ean->right))) {
+            /* partial mismatch - reset collected parts */
+            dprintf(2, " rst(type %x %x)", ean->left, ean->right);
+            ean->left = ean->right = ean->addon = ZEBRA_NONE;
+        }
+
+        if(part & EAN_RIGHT) {
+            part &= ZEBRA_SYMBOL;
+            j = (part == ZEBRA_EAN13) ? 12 : 7;
+            for(i = (part == ZEBRA_EAN13) ? 6 : 4; i; i--, j--) {
+                unsigned char digit = pass->raw[i] & 0xf;
+                if(ean->right && ean->buf[j] != digit) {
+                    /* partial mismatch - reset collected parts */
+                    dprintf(2, " rst(right)");
+                    ean->left = ean->right = ean->addon = ZEBRA_NONE;
+                }
+                ean->buf[j] = digit;
+            }
+            ean->right = part;
+        }
+        else /* EAN_LEFT or entire UPC-E symbol */ {
+            j = (part == ZEBRA_EAN13) ? 6 : 3;
+            for(i = (part == ZEBRA_EAN13) ? 6 : 4; i >= 0; i--, j--) {
+                unsigned char digit = pass->raw[i] & 0xf;
+                if(ean->left && ean->buf[j] != digit) {
+                    /* partial mismatch - reset collected parts */
+                    dprintf(2, " rst(left)");
+                    ean->left = ean->right = ean->addon = ZEBRA_NONE;
+                }
+                ean->buf[j] = digit;
+            }
+            ean->left = part;
+        }
+    }
+    /* FIXME broken for UPC-E, addons */
+    part = (ean->left & ean->right);
+    if(!part)
+        part = ZEBRA_PARTIAL;
+
+    if((part == ZEBRA_EAN13 && ean_check_parity(ean, 12)) ||
+       (part == ZEBRA_EAN8 && ean_check_parity(ean, 7)))
         /* invalid parity */
         part = ZEBRA_NONE;
 
-    if(part == ZEBRA_EAN13 && ean->buf[13] >= 0)
-        part |= (ean->buf[15] >= 0) ? ZEBRA_ADDON5 : ZEBRA_ADDON2;
-
-    if(part == LEFT_HALF || part == RIGHT_HALF)
-        part = ZEBRA_PARTIAL;
+    if(part > ZEBRA_PARTIAL)
+        part |= ean->addon;
+    dprintf(2, " %x/%x=%x", ean->left, ean->right, part);
     return(part);
 }
 
@@ -438,7 +480,7 @@ static inline void postprocess (zebra_decoder_t *dcode,
     ean_decoder_t *ean = &dcode->ean;
     int i = 0;
     if((sym & ZEBRA_SYMBOL) > ZEBRA_PARTIAL)
-        for(; i < 12 && ean->buf[i] >= 0; i++)
+        for(; i < ((sym & ZEBRA_SYMBOL) - 1) && ean->buf[i] >= 0; i++)
             dcode->buf[i] = ean->buf[i] + '0';
     int j = i;
     if(sym & ZEBRA_ADDON)
